--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,11 +118,16 @@
 
     </LinearLayout>
 
-    <ScrollView
-        android:id="@+id/sv"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-    </ScrollView>
+        <ImageView
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/byci"
+            android:id="@+id/iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 
 </LinearLayout>
